# Modern-Cpp-for-Computer-Vision-and-Image-Processing

./: LICENSE  README.md
HW2/: CMakeLists.txt
HW2/data/: lena.ascii_copy.pgm  lena_downsized.ascii.pgm
HW2/src/: CMakeLists.txt
HW2/src/application1/: main.cpp
HW2/src/application2/: main.cpp
HW2/src/application3/: main.cpp
HW2/src/application4/: CMakeLists.txt  main.cpp
HW2/src/igg_image/: CMakeLists.txt  image.cpp  image.h
HW2/tests/: CMakeLists.txt
